welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: not enough arguments for method positionFinale: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
	while (!positionFinale()) {
                              ^